# gascity-finally

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.beads/: config.yaml  metadata.json
backend/: main.py  pyproject.toml
backend/api/: chat.py  portfolio.py  stream.py  watchlist.py
backend/db/: schema.py
backend/market/: cache.py  interface.py  simulator.py
backend/tests/: conftest.py  test_api.py  test_portfolio.py  test_simulator.py
frontend/: jest.config.js  package-lock.json  package.json
frontend/__tests__/: ChatPanel.test.tsx  PositionsTable.test.tsx  WatchlistPanel.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  ConnectionStatus.tsx  MainChart.tsx  PnLChart.tsx  PortfolioHeatmap.tsx  PositionsTable.tsx  Sparkline.tsx  TradeBar.tsx  WatchlistPanel.tsx
frontend/hooks/: usePortfolio.ts  usePortfolioHistory.ts  usePrices.ts  useWatchlist.ts
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: docker-compose.test.yml  e2e.spec.ts  package-lock.json  package.json  playwright.config.ts
